# doom-style-render

./: .gitignore  CMakeLists.txt  Makefile  level.txt
.github/workflows/: c-unit-tests.yml
editor/: CMakeLists.txt  me_cmds.c  me_cmds.h  me_def.h  me_main.c  me_state.h
res/: config.cfg  editor.cfg  game.cfg  test.wad
res/cfg/: alias_test.cfg
res/maps/: cube.prt  test.prt
src/: CMakeLists.txt  cl_def.h  cl_main.c  cl_state.h
src/cmd/: cmd_exec.c  cmd_exec.h
src/console/: c_con.c  c_con.h  c_draw.c  c_draw.h
src/core/: sys.c  sys.h  v_vid.c  v_vid.h
src/core/file/: f_conf.c  f_conf.h  f_wad.c  f_wad.h
src/core/keys/: k_manager.c  k_manager.h
src/core/mem/: m_alloc.c  m_alloc.h  m_utils.c  m_utils.h  t_mem.c
src/game/: g_game.c  g_game.h  g_map.c  g_map.h  g_phys.c  g_phys.h  g_player.c  g_player.h  g_world_object.c  g_world_object.h
src/game/gfx/: gfx_post_process.c  gfx_post_process.h
src/render/: r_camera.h  r_render.c  r_render.h
src/render/draw/: r_draw.c  r_draw.h
src/render/draw/asm/: arm64_r_draw.s  x86_r_draw.s
src/render/draw/asm/arm/win/: win_arm32.s
src/render/draw/asm/x86/unix/: unix_x86.s
src/render/draw/asm/x86/win/: win_x86_64.s
src/render/utils/: r_texture.c  r_texture.h
src/utils/: u_def.h  u_state.h
src/utils/math/: u_math.c  u_math.h
src/utils/math/asm/: c_impl.c
src/utils/math/asm/x86/win/: win_x86_64.s
tests/: CMakeLists.txt  t_conf.c  t_mem.c  t_sys.c
tools/: char_gen.py
